fix thumbnail overflow

--- a/hypertube-frontend/src/app/components/home-page/home-page.component.css
+++ b/hypertube-frontend/src/app/components/home-page/home-page.component.css
@@ -4,3 +4,24 @@
   flex-direction: line;
 
 }
+
+.mat-divider {
+  border-top-color: #AFBB80;
+  height: 2vh;
+}
+
+
+.form-select {
+  background: #153f2f;
+  color: white;
+  border-radius: 5%;
+  border-color: #AFBB80;
+  margin: 2%;
+}
+
+.homepage-select {
+  place-content: end;
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+}
