--- a/hypertube-frontend/src/app/components/thumbnail/thumbnail.component.css
+++ b/hypertube-frontend/src/app/components/thumbnail/thumbnail.component.css
@@ -18,27 +18,36 @@
     margin-bottom: 1vh;
     margin-left: 2vw;
     margin-right: 2vw;
+
 }
 
 .thumbnail-image {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border-color: black;
+    border-radius: 5%;
+    border: solid;
 }
 
 .thumbnail-image-container {
-    /* padding: 1%; */
+    padding: 2%;
     padding-bottom: 0;
     height: 80%;
 }
 
 .thumbnail-title {
-    white-space: nowrap;
-    font-size: 1.2rem;
+    font-size: 0.8rem;
     text-align: center;
     color: white;
     height: 8%;
+    width: 100%;
+
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
+
 
 .mat-mdc-progress-bar {
     --mdc-linear-progress-active-indicator-color: red;
@@ -49,11 +58,15 @@
 
 
 .thumbnail-quick-info {
-    font-size: 0.8rem;
+    font-size: 0.6rem;
     text-align: center;
     color: white;
     height: 10%;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 2vh;
+
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
